# my-first-lib

./: Cargo.toml
src/: lib.rs  mymain.rs
