[package]
name = "my-first-lib"
version = "0.1.0"
edition = "2018"


# move mymain.rs from src/bin to src by declaring it under the bin target
[[bin]]
name = "mymain"
path = "src/mymain.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
